Ok version mobile - V1 - A ajouter : footer fixe : accueil=ok / menu = encours

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 body #bloc_page {
   display: flex;
-  height: 94.5%;
+  min-height: 94.5%;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
@@ -325,7 +325,7 @@ article li {
   min-height: 5.5%;
   padding-left: 1.5vh;
   padding-right: 1.5vh;
-  position: absolute;
+  position: sticky;
   box-sizing: border-box;
   bottom: 0;
   width: 100%;
