--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,7 +3,7 @@ body {
   height: 100vh;
   #bloc_page {
     display: flex;
-    height: 94.5%;
+    min-height: 94.5%;
     flex-direction: column;
     justify-content: space-between;
     position: relative;
