--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -7,7 +7,7 @@
   min-height: 5.5%;
   padding-left: 1.5vh;
   padding-right: 1.5vh;
-  position: absolute;
+  position: sticky;
   box-sizing: border-box;
   bottom: 0;
   width: 100%;
